# dose-aware-cold-diffusion

./: LICENSE  README.md  env.yml  requirements.txt
Data/: dataloaders.py
configs/: config.yaml  default.yaml
configs/data/: lodopab.yaml  mayo2016.yaml  mayo2020.yaml
configs/eval/: metrics.yaml
configs/model/: dacd_unet.yaml
dacd/: Makefile  README.md  pyproject.toml
dacd/configs/train/: stage_a.yaml  stage_b.yaml
dacd/dacd/: __init__.py
dacd/dacd/models/: dacd_model.py
dacd/data/: ct_ops.py  datamodules.py
dacd/docker/: Dockerfile.train
dacd/engine/: optimizer.py  schedulers.py  trainer.py
dacd/eval/: metrics.py
dacd/models/: dap.py  dcsa.py  pempp.py  unet_backbone.py
dacd/scripts/: ablate.py
dacd/tests/: test_smoke_training.py
docker/: Dockerfile.dev
models/: pem_module.py  perception_module.py  reconstruction_unet.py
ops/: physics_ops.py
scripts/: eval.py  simulate_dose_poisson.py  train.py  train_stage_b.py
tests/: test_ct_ops.py  test_dap_dcsa.py  test_metrics.py
train/: train_utils.py  trainer.py
