[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dacd"
version = "0.1.0"
description = "Dose-Aware Cold Diffusion with Physics Consistency for LDCT Reconstruction"
requires-python = ">=3.10"
authors = [{ name = "Your Name"}]
dependencies = [
  "torch>=2.3",
  "torchvision>=0.18",
  "torchaudio>=2.3",
  "numpy>=1.26",
  "scipy>=1.11",
  "scikit-image>=0.22",
  "tqdm>=4.66",
  "rich>=13.7",
  "pydantic>=2.8",
  "statsmodels>=0.14",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "einops>=0.7",
  "psutil>=5.9",
  "opencv-python-headless>=4.10",
  "kornia>=0.7",
  "termcolor>=2.4",
  "filelock>=3.15",
]
optional-dependencies = { radon = ["torch-radon>=2.0.2"] }

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
